--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -43,7 +43,7 @@
 }
 
 :root {
-  --font-heading: 'Lobster', cursive;
+  --font-heading: 'Lobster', cursive, 'sans-serif';
   --font-body: 'Roboto Slab', serif;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
